cpp/src/quickjs-ffi-ios.h

    JSValue *parseJSON(JSContext *ctx, const char *buf, size_t buf_len,
                       const char *filename);
    JSValue *parseJSON2(JSContext *ctx, const char *buf, size_t buf_len,
                        const char *filename, int flags);
    JSValue *JSONStringify(JSContext *ctx, JSValueConst *obj);
    /* JSValue Creation */
    JSValue *newError(JSContext *ctx);
    JSValue *newBool(JSContext *ctx, JS_BOOL val);
    JSValue *newNull(JSContext *ctx);
    /* JSValue Validator */
    JS_BOOL isNan(JSValue *v);
    JS_BOOL isNumber(JSValueConst *v);
    JS_BOOL isBigInt(JSContext *ctx, JSValueConst *v);
    JS_BOOL isBigFloat(JSValueConst *v);
    JS_BOOL isBigDecimal(JSValueConst *v);
    JS_BOOL isBool(JSValueConst *v);
    JS_BOOL isNull(JSValueConst *v);
    JS_BOOL isUndefined(JSValueConst *v);
    JS_BOOL isUninitialized(JSValueConst *v);
    JS_BOOL isString(JSValueConst *v);
    JS_BOOL isSymbol(JSValueConst *v);
    JS_BOOL isObject(JSValueConst *v);
    JS_BOOL isError(JSContext *ctx, JSValueConst *val);
    JS_BOOL isFunction(JSContext *ctx, JSValueConst *val);
    JS_BOOL isConstructor(JSContext *ctx, JSValueConst *val);
    int isArray(JSContext *ctx, JSValueConst *val);
    int isExtensible(JSContext *ctx, JSValueConst *obj);
    /* JSValue execution */
    int getValueTag(JSValue v);
    void freeValue(JSContext *ctx, JSValue *v);
    void freeValueRT(JSRuntime *rt, JSValue *v);
    JSValue *dupValue(JSContext *ctx, JSValueConst *v);
    JSValue *dupValueRT(JSRuntime *rt, JSValueConst *v);
    int toBool(JSContext *ctx, JSValueConst *val);
    int32_t toInt32(JSContext *ctx, JSValueConst *val);
    int toUint32(JSContext *ctx, uint32_t *pres, JSValueConst *val);
    int64_t toInt64(JSContext *ctx, JSValueConst *val);
    int toIndex(JSContext *ctx, uint64_t *plen, JSValueConst *val);
    double toFloat64(JSContext *ctx, JSValueConst *val);
    int toBigInt64(JSContext *ctx, int64_t *pres, JSValueConst *val);
    int toInt64Ext(JSContext *ctx, int64_t *pres, JSValueConst *val);
    JSValue *toString(JSContext *ctx, JSValueConst *val);
    JSValue *toPropertyKey(JSContext *ctx, JSValueConst *val);
    const char *toCStringLen2(JSContext *ctx, size_t *plen, JSValueConst *val1, JS_BOOL cesu8);
    const char *toCStringLen(JSContext *ctx, size_t *plen, JSValueConst *val1);
    const char *toCString(JSContext *ctx, JSValueConst *val1);
    void freeCString(JSContext *ctx, const char *ptr);